# Zyringe

./: Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
helper/: Makefile  zyringe_helper.c
packaging/: 49-zyringe.rules
scripts/: build-resources.sh  dev.sh  install.sh  package.sh
src/: App.tsx  phases.ts  settings.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diag.rs  injector.rs  lib.rs  loader.rs  main.rs  metadata.rs  mono.rs  scanner.rs  steam.rs
src/components/: DllPicker.tsx  InfoTip.tsx  InjectForm.tsx  LoaderPanel.tsx  MenuPopup.tsx  MetadataBrowser.tsx  ProcessContextMenu.tsx  ProcessList.tsx  ResizeHandles.tsx  SettingsModal.tsx  StatusLog.tsx  TitleBar.tsx
zyringe-inject/: Cargo.toml
zyringe-inject/src/: elf.rs  main.rs  maps.rs  ptrace_engine.rs
