[package]
name = "zyringe"
version = "0.1.0"
description = "Linux-native universal Mono/Unity game injector"
authors = ["TheHolyOneZ"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "zyringe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zyringe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
